save hotkey for increasing chat volume in user settings

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -16,6 +16,9 @@
             <setting name="balancePosition" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="hotkeyIncreaseChatVolume" serializeAs="String">
+                <value />
+            </setting>
         </VolumeBalancer.Properties.Settings>
     </userSettings>
 </configuration>
