implemented all hotkeys

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -16,7 +16,16 @@
             <setting name="balancePosition" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="hotkeyIncreaseChatVolume" serializeAs="String">
+            <setting name="hotkeyIncreaseChatApplicationVolume" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hotkeyIncreaseOtherApplicationVolume" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hotkeyResetBalance" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hotkeyResetAllVolumes" serializeAs="String">
                 <value />
             </setting>
         </VolumeBalancer.Properties.Settings>
