renamed chat application to focus application

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -10,13 +10,13 @@
     </startup>
     <userSettings>
         <VolumeBalancer.Properties.Settings>
-            <setting name="chatApplication" serializeAs="String">
+            <setting name="focusApplication" serializeAs="String">
                 <value />
             </setting>
             <setting name="balancePosition" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="hotkeyIncreaseChatApplicationVolume" serializeAs="String">
+            <setting name="hotkeyIncreaseFocusApplicationVolume" serializeAs="String">
                 <value />
             </setting>
             <setting name="hotkeyIncreaseOtherApplicationVolume" serializeAs="String">
