implemeted temporary focus application

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -10,7 +10,7 @@
     </startup>
     <userSettings>
         <VolumeBalancer.Properties.Settings>
-            <setting name="focusApplication" serializeAs="String">
+            <setting name="mainFocusApplication" serializeAs="String">
                 <value />
             </setting>
             <setting name="balancePosition" serializeAs="String">
@@ -23,6 +23,12 @@
                 <value />
             </setting>
             <setting name="hotkeyResetBalance" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hotkeyActivateMainFocusApplication" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="hotkeyActivateTemporaryFocusApplication" serializeAs="String">
                 <value />
             </setting>
             <setting name="hotkeyResetAllVolumes" serializeAs="String">
