added choosing of different tray icon colors and enabling autostart

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -34,6 +34,15 @@
             <setting name="hotkeyResetAllVolumes" serializeAs="String">
                 <value />
             </setting>
+            <setting name="trayIcon" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="autostart" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="balanceSystemSound" serializeAs="String">
+                <value>False</value>
+            </setting>
         </VolumeBalancer.Properties.Settings>
     </userSettings>
 </configuration>
