--- a/VolumeBalancer/VolumeBalancer.csproj
+++ b/VolumeBalancer/VolumeBalancer.csproj
@@ -119,6 +119,9 @@
   <ItemGroup>
     <None Include="Resources\iconGrey.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\iconBlue.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="C:\Users\Jakob\projects\VolumeBalancer\packages\Brutal.Dev.StrongNameSigner.2.1.3\build\Brutal.Dev.StrongNameSigner.targets" Condition="Exists('C:\Users\Jakob\projects\VolumeBalancer\packages\Brutal.Dev.StrongNameSigner.2.1.3\build\Brutal.Dev.StrongNameSigner.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
