--- a/VolumeBalancer/VolumeBalancer.csproj
+++ b/VolumeBalancer/VolumeBalancer.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="AudioApp.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="HotkeyListElement.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
