Added customizable tray icon color

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -32,7 +32,7 @@
                 <value />
             </setting>
             <setting name="trayIcon" serializeAs="String">
-                <value />
+                <value>Silver</value>
             </setting>
             <setting name="balanceSystemSound" serializeAs="String">
                 <value>False</value>
