--- a/VolumeBalancer/VolumeBalancer.csproj
+++ b/VolumeBalancer/VolumeBalancer.csproj
@@ -49,7 +49,8 @@
     <StartupObject>VolumeBalancer.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Resources\iconBlack.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NAudio, Version=1.8.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -112,16 +113,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\iconBlack.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\iconWhite.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\iconGrey.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\iconBlue.ico" />
+    <Content Include="Resources\iconBlack.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Brutal.Dev.StrongNameSigner.2.1.3\build\Brutal.Dev.StrongNameSigner.targets" Condition="Exists('..\packages\Brutal.Dev.StrongNameSigner.2.1.3\build\Brutal.Dev.StrongNameSigner.targets')" />
