added program icon and set default color of tray icon to "highlight" (blue)

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -32,7 +32,7 @@
                 <value />
             </setting>
             <setting name="trayIcon" serializeAs="String">
-                <value>Silver</value>
+                <value>Highlight</value>
             </setting>
             <setting name="balanceSystemSound" serializeAs="String">
                 <value>False</value>
