save custom colors in user settings

--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -37,6 +37,9 @@
             <setting name="balanceSystemSound" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="customColors" serializeAs="String">
+                <value />
+            </setting>
         </VolumeBalancer.Properties.Settings>
     </userSettings>
 </configuration>
