--- a/VolumeBalancer/App.config
+++ b/VolumeBalancer/App.config
@@ -31,13 +31,16 @@
             <setting name="hotkeyResetAllVolumes" serializeAs="String">
                 <value />
             </setting>
-            <setting name="trayIcon" serializeAs="String">
-                <value>Highlight</value>
+            <setting name="trayIconColor" serializeAs="String">
+                <value />
             </setting>
             <setting name="balanceSystemSound" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="customColors" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="formIconColor" serializeAs="String">
                 <value />
             </setting>
         </VolumeBalancer.Properties.Settings>
